// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-controls="123e4567-e89b-12d3-a456-426655440004"
      aria-expanded="false"
      aria-haspopup="true"
      class="button base hasIconAndLabel work secondary fullWidth"
      id="123e4567-e89b-12d3-a456-426655440003"
      type="button"
    >
      <svg
        class="Z6OfUI2sH34- TphtDHcwxDc-"
        data-testid="more"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M170.834 509.498c0-47.176 38.242-85.416 85.416-85.416s85.416 38.241 85.416 85.416c0 47.176-38.242 85.416-85.416 85.416s-85.416-38.241-85.416-85.416zM427.084 509.498c0-47.176 38.241-85.416 85.416-85.416s85.416 38.241 85.416 85.416c0 47.176-38.241 85.416-85.416 85.416s-85.416-38.241-85.416-85.416zM768.751 424.081c-47.176 0-85.416 38.241-85.416 85.416s38.241 85.416 85.416 85.416c47.176 0 85.416-38.241 85.416-85.416s-38.241-85.416-85.416-85.416z"
        />
      </svg>
      <span
        class="base extraBold base base"
      >
        More Actions
      </span>
    </button>
  </div>
</div>
`;

exports[`Menu with custom activator renders 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-controls="123e4567-e89b-12d3-a456-426655440040"
      aria-expanded="false"
      aria-haspopup="true"
      class="button base work primary"
      id="123e4567-e89b-12d3-a456-426655440039"
      type="button"
    >
      <span
        class="base extraBold base base"
      >
        Menu
      </span>
    </button>
  </div>
</div>
`;
